force-app/main/default/objects/NPS_Survey_Log__c/NPS_Survey_Log__c.object-meta.xml
<CustomObject>
    <label>NPS Survey Log</label>
    <nameField>
        <label>NPS Survey Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Survey Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>