force-app/main/default/objects/NPS_Survey_Log__c/fields/call_done_by__c.field-meta.xml
<CustomField>
    <fullName>call_done_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Survey_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>