force-app/main/default/objects/NPS_Survey_Log__c/fields/NPS_Call_Counter__c.field-meta.xml
<CustomField>
    <fullName>NPS_Call_Counter__c</fullName>
    <label>NPS Call Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>