force-app/main/default/objects/NPS_Survey_Log__c/fields/NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Survey</label>
    <referenceTo>NPS_Survey__c</referenceTo>
    <relationshipLabel>NPS Survey Logs</relationshipLabel>
    <relationshipName>NPS_Survey_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>